// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add and remove boxes 1`] = `
<DocumentFragment>
  <form>
    <label
      for="color"
    >
      Color:
    </label>
    <input
      id="color"
      name="color"
      type="color"
      value="#000000"
    />
    <label
      for="width"
    >
      Width:
    </label>
    <input
      id="width"
      name="width"
      type="number"
      value=""
    />
    <label
      for="height"
    >
      Height:
    </label>
    <input
      id="height"
      name="height"
      type="number"
      value=""
    />
    <button
      data-testid="submit-btn"
    >
      Add
    </button>
  </form>
  <div
    data-testid="box-list"
  >
    <div
      class="Box"
      style="background-color: rgb(255, 0, 255); width: 50px; height: 50px;"
    />
    <button>
      X
    </button>
  </div>
</DocumentFragment>
`;

exports[`can add and remove boxes 2`] = `
<DocumentFragment>
  <form>
    <label
      for="color"
    >
      Color:
    </label>
    <input
      id="color"
      name="color"
      type="color"
      value="#000000"
    />
    <label
      for="width"
    >
      Width:
    </label>
    <input
      id="width"
      name="width"
      type="number"
      value=""
    />
    <label
      for="height"
    >
      Height:
    </label>
    <input
      id="height"
      name="height"
      type="number"
      value=""
    />
    <button
      data-testid="submit-btn"
    >
      Add
    </button>
  </form>
  <div
    data-testid="box-list"
  />
</DocumentFragment>
`;

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <form>
    <label
      for="color"
    >
      Color:
    </label>
    <input
      id="color"
      name="color"
      type="color"
      value="#000000"
    />
    <label
      for="width"
    >
      Width:
    </label>
    <input
      id="width"
      name="width"
      type="number"
      value=""
    />
    <label
      for="height"
    >
      Height:
    </label>
    <input
      id="height"
      name="height"
      type="number"
      value=""
    />
    <button
      data-testid="submit-btn"
    >
      Add
    </button>
  </form>
  <div
    data-testid="box-list"
  />
</DocumentFragment>
`;
